# stockline-test

./: .env  .gitignore  .pre-commit-config.yaml  CHALLENGE.md  DECISIONS.md  README.md  TAKE_HOME_ASSIGNMENT.md  docker-compose.yml  pyrightconfig.json
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: database.py  di.py  main.py  models.py  schemas.py  seed.py
backend/app/domain/: __init__.py  repositories.py
backend/app/repositories/: operation_log_repository.py  pre_order_flow_repository.py  pre_order_repository.py
backend/app/routes/: flows.py  partners.py  pre_orders.py  products.py  sync.py  units.py
backend/app/services/: base_entity_sync_service.py  conflict_resolver.py  event_broadcaster.py  pre_order_flow_sync_service.py  pre_order_sync_service.py  sync_push_service.py
backend/tests/: fake_repositories.py  test_conflict_resolver.py  test_pre_order_flow_sync_service.py  test_pre_order_sync_service.py
frontend/: Dockerfile  README.md  eslint.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.tsbuildinfo  vitest.config.ts
frontend/src/__tests__/: setup.ts
frontend/src/__tests__/e2e/: config.ts  offline-online.spec.ts
frontend/src/__tests__/mocks/: api.mock.ts  logger.mock.ts  queryInvalidator.mock.ts  syncdb.mock.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/partners/: page.tsx
frontend/src/hooks/: use-partners.ts  use-products.ts  use-recap.ts  use-sidebar-collapse.ts  use-sync-status.ts  use-units.ts
frontend/src/lib/: api.ts  types.ts
(+41 files in other folders)
